--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation("io.coil-kt:coil:1.1.1")
+
     // AndroidX - KTX
     implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation 'androidx.activity:activity-ktx:1.2.0-rc01'
