update and add image

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation("io.coil-kt:coil:1.1.1")
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     // AndroidX - KTX
     implementation 'androidx.preference:preference-ktx:1.1.1'
