--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.estealexis.todoestealexis">
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
 
     <application
@@ -20,6 +21,13 @@
             </intent-filter>
         </activity>
         <activity android:name="com.estealexis.todoestealexis.task.TaskActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name="com.estealexis.todoestealexis.userinfo.UserInfoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
